--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-*.tfstate*
+#  Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# .tfvars files
+*.tfvars
